CSS fixes for modal dialogs
Slightly concerned that this will spill over to other modals.

--- a/hx.css
+++ b/hx.css
@@ -482,7 +482,7 @@ h4.hx-superbold {
 /* This block is for pop-up problems.
 /***************************************/
 
-.hx-popup .ui-widget-overlay {
+.ui-widget-overlay {
    background: #666;
    opacity: .30;
    filter: Alpha(Opacity=30);
@@ -493,7 +493,7 @@ h4.hx-superbold {
 	z-index: 100001 !important;
 }
 
-.hx-popup .no-close .ui-dialog-titlebar-close {
+.no-close .ui-dialog-titlebar-close {
   display: none;
 }
 
